--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -39,15 +39,17 @@ h1 {
     }
 }
 
-h4.nrathletePerTeam{
-    span{
-        &.insuficient{
+h4.nrathletePerTeam {
+    span {
+        &.insuficient {
             border-bottom: 3px solid yellow;
         }
-        &.cool{
+
+        &.cool {
             border-bottom: 3px solid green;
         }
-        &.wrong{
+
+        &.wrong {
             border-bottom: 3px solid red;
 
         }
@@ -97,7 +99,7 @@ ul {
     .athlete {
         border-bottom: 1px solid #ccc;
 
-        &:hover{
+        &:hover {
             background-color: #ccc;
         }
 
@@ -110,10 +112,11 @@ ul {
             height: 13px;
             width: 13px;
             background-image: url('/assets/insta.svg');
-            background-repeat: no-repeat;
-            background-size: cover;
+            background-size: 100%;
+            background-position: center;
             margin-left: 5px;
-            a{
+
+            a {
                 display: block;
                 width: 100%;
                 height: 100%;
@@ -128,18 +131,21 @@ ul {
 
         .name {
             margin: 0 5px 0 0;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
 
-            &.notinQuali{
+            &.notinQuali {
                 color: red;
             }
 
-            .injury{
-                img{
-                    width: 13px;
-                    height: 13px;
-                    vertical-align: middle;
-                    margin-left: 5px;
-                }
+            .injury {
+                background-image: url('/assets/injury.png');
+                width: 13px;
+                height: 13px;
+                background-repeat: no-repeat;
+                background-size: cover;
+                margin-left: 5px;
             }
         }
 
@@ -169,14 +175,15 @@ ul {
 
         &.selected {
             background-color: black;
-            background: linear-gradient(90deg,rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 1) 65%, rgba(0, 0, 0, 1) 100%);
+            background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 1) 65%, rgba(0, 0, 0, 1) 100%);
 
             color: white
         }
     }
 }
 
-.history, .currentTeam{
+.history,
+.currentTeam {
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -184,6 +191,7 @@ ul {
     border-radius: 12px;
     background-color: #f9f9f9;
     font-family: Arial, sans-serif;
+
     h4 {
         margin: 0 0 0 0;
     }
@@ -216,11 +224,13 @@ ul {
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
-            label{
+
+            label {
                 display: block;
                 clear: none;
             }
-            input{
+
+            input {
                 display: block;
                 clear: none;
             }
