--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -135,6 +135,10 @@ ul {
             flex-direction: row;
             align-items: center;
 
+            .nume{
+                margin-left: 5px;
+            }
+
             &.notinQuali {
                 color: red;
             }
